fix:修复行内solid shift+enter换行，界面输入不正常的问题

--- a/blocks/general/style.less
+++ b/blocks/general/style.less
@@ -61,6 +61,6 @@
     margin: 2px 0px;
 }
 
-.sy-block-emoji {
-    display: inline-block;
-}
+// .sy-block-emoji {
+//     display: inline-block;
+// }
